<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context=".MainActivity">
	<item
		android:id="@+id/search_action"
		android:actionViewClass="android.widget.SearchView"
		android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
		android:title="@string/menu_title_search"
		app:showAsAction="always"/>
	<item
		android:id="@+id/baseline_switch_action"
		android:checkable="true"
		android:checked="false"
		android:orderInCategory="100"
		android:title="@string/menu_title_switch_base"
		app:showAsAction="never"/>
	<item
		android:id="@+id/keyline_switch_action"
		android:checkable="true"
		android:checked="false"
		android:orderInCategory="100"
		android:title="@string/menu_title_switch_key"
		app:showAsAction="never"/>
	<item
		android:id="@+id/spacing_switch_action"
		android:checkable="true"
		android:checked="false"
		android:orderInCategory="100"
		android:title="@string/menu_title_switch_spacing"
		app:showAsAction="never"/>
</menu>
