<org.lucasr.dspec.DesignSpecFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/design_spec_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:designSpec="@raw/my_spec">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

		<com.ruswizards.rwlab127.SpecialLinearLayout
			android:id="@+id/layout_special"
			android:background="@drawable/rw_item_background"
			android:gravity="center_vertical"
			android:layout_width="match_parent"
			android:layout_height="@dimen/height_upper_tile"
			android:orientation="vertical"
			android:paddingLeft="@dimen/left_padding_upper_tile"
			app:onSpecialClick="onSpecialClick" >
			<TextView
				android:id="@+id/text_view_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/text_view_title"
				style="@style/HeaderTextTitle" />
			<TextView
				android:id="@+id/text_view_details"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/text_view_details"
				style="@style/TextDetails" />
		</com.ruswizards.rwlab127.SpecialLinearLayout>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/recycler_view"
			android:layout_below="@+id/layout_special"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:scrollbars="vertical" >
		</android.support.v7.widget.RecyclerView>

		<ImageButton
			android:id="@+id/fab_button"
			android:background="@drawable/fab_shape"
			android:contentDescription="@string/fab_description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin_fab"
			android:layout_marginRight="@dimen/margin_fab"
			android:layout_marginEnd="@dimen/margin_fab"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:onClick="onClick" />

    </RelativeLayout>
</org.lucasr.dspec.DesignSpecFrameLayout>
